--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=mariah_store
+spring.datasource.url=jdbc:postgresql://localhost:5432/MariahStore
+spring.datasource.username=Mariah
+spring.datasource.password=123123
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
